--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,8 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    "typeRoots": ["./node_modules/@types"]
+    "jsx": "react-jsx"
   },
   "include": ["src/**/*"]
 }
